--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.12.12",
     "eslint": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "prisma": "^5.14.0",
     "tsx": "^4.10.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "fastify": "^4.27.0"
+    "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
+    "@prisma/client": "^5.14.0",
+    "dotenv": "^16.4.5",
+    "fastify": "^4.27.0",
+    "fastify-type-provider-zod": "^1.2.0",
+    "zod": "^3.23.8"
   }
 }
