feat: add dayjs library for date manipulation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "fastify-plugin": "^4.5.1",
